Fix map position when switching from align=right to align=center
Bug: T144327

--- a/modules/ve-maps/ve.ui.MWMaps.css
+++ b/modules/ve-maps/ve.ui.MWMaps.css
@@ -21,6 +21,7 @@
 
 /* Fixes align=center */
 .ve-ce-mwMapsNode.center {
+	position: relative;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
